chore: update connection string to postgresql

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=blog.db"
+    "DefaultConnection": "Host=192.168.0.241;Port=30432;Database=portfolio_blog_db;Username=calgo-stats_user;Password=calgo-stats_password;Include Error Detail=true"
   }
 }
