--- a/PortfolioBlog.csproj
+++ b/PortfolioBlog.csproj
@@ -12,5 +12,6 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.14" />
+    <PackageReference Include="FastEndpoints" Version="5.32.0" />
   </ItemGroup>
 </Project>
