--- a/PortfolioBlog.csproj
+++ b/PortfolioBlog.csproj
@@ -13,5 +13,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.14" />
     <PackageReference Include="FastEndpoints" Version="5.32.0" />
+    <PackageReference Include="Mediator.Abstractions" Version="3.1.0-preview.17" />
+    <PackageReference Include="Mediator.SourceGenerator" Version="3.1.0-preview.17" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
   </ItemGroup>
 </Project>
