--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=192.168.0.241;Port=30432;Database=portfolio_blog_db;Username=calgo-stats_user;Password=calgo-stats_password;Include Error Detail=true"
+    "DefaultConnection": "Host=192.168.0.241;Port=30432;Database=portfolio_blog_db;Username=calgo-stats_user;Password=calgo-stats_password;Include Error Detail=true",
+    "Redis": "redis-19015.c304.europe-west1-2.gce.cloud.redislabs.com:19015,password=3FsZ0HnPtvAZxR6jiiDSQW7ourcF9CKF"
   }
 }
