--- a/src/PortfolioBlog/PortfolioBlog.csproj
+++ b/src/PortfolioBlog/PortfolioBlog.csproj
@@ -17,7 +17,7 @@
     />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.3" />
     <PackageReference Include="Microsoft.Extensions.Resilience" Version="10.3.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.3" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.14" />
     <PackageReference Include="FastEndpoints" Version="5.32.0" />
     <PackageReference Include="Mediator.Abstractions" Version="3.1.0-preview.17" />
